--- a/GlobalEvents/Servicios/Servicios.csproj
+++ b/GlobalEvents/Servicios/Servicios.csproj
@@ -31,7 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Aether, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Aether.8.0.2\lib\net35\Aether.dll</HintPath>
+      <HintPath>..\packages\Aether.8.2.0\lib\net45\Aether.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Chiron, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -49,27 +49,27 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="FParsec, Version=1.0.0.0, Culture=neutral, PublicKeyToken=40ccfc0a09edbb5d, processorArchitecture=MSIL">
-      <HintPath>..\packages\FParsec.1.0.1\lib\net40-client\FParsec.dll</HintPath>
+      <HintPath>..\packages\FParsec.1.0.2\lib\net40-client\FParsec.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="FParsecCS, Version=1.0.0.0, Culture=neutral, PublicKeyToken=40ccfc0a09edbb5d, processorArchitecture=MSIL">
-      <HintPath>..\packages\FParsec.1.0.1\lib\net40-client\FParsecCS.dll</HintPath>
+      <HintPath>..\packages\FParsec.1.0.2\lib\net40-client\FParsecCS.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="FSharp.Core, Version=4.3.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\FSharp.Core.3.1.2.5\lib\net40\FSharp.Core.dll</HintPath>
+    <Reference Include="FSharp.Core, Version=4.4.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\FSharp.Core.4.1.12\lib\net45\FSharp.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Hopac, Version=0.3.21.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Hopac.0.3.21\lib\net45\Hopac.dll</HintPath>
+    <Reference Include="Hopac, Version=0.3.23.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Hopac.0.3.23\lib\net45\Hopac.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Hopac.Core, Version=0.3.21.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Hopac.0.3.21\lib\net45\Hopac.Core.dll</HintPath>
+    <Reference Include="Hopac.Core, Version=0.3.23.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Hopac.0.3.23\lib\net45\Hopac.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Hopac.Platform, Version=0.3.21.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Hopac.0.3.21\lib\net45\Hopac.Platform.dll</HintPath>
+    <Reference Include="Hopac.Platform, Version=0.3.23.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Hopac.0.3.23\lib\net45\Hopac.Platform.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="HttpFs, Version=4.1.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -79,13 +79,17 @@
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.10.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="NodaTime, Version=1.3.0.0, Culture=neutral, PublicKeyToken=4226afe0d9b296d1, processorArchitecture=MSIL">
-      <HintPath>..\packages\NodaTime.1.3.2\lib\net35-Client\NodaTime.dll</HintPath>
+    <Reference Include="NodaTime, Version=2.0.0.0, Culture=neutral, PublicKeyToken=4226afe0d9b296d1, processorArchitecture=MSIL">
+      <HintPath>..\packages\NodaTime.2.0.0\lib\net45\NodaTime.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ValueTuple, Version=4.0.1.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.ValueTuple.4.3.0\lib\netstandard1.0\System.ValueTuple.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -111,6 +115,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="any\netstandard1.6\FSharp.Core.optdata" />
+    <None Include="any\netstandard1.6\FSharp.Core.sigdata" />
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
