--- a/GlobalEvents/Servicios/packages.config
+++ b/GlobalEvents/Servicios/packages.config
@@ -1,14 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Aether" version="8.0.2" targetFramework="net452" />
+  <package id="Aether" version="8.2.0" targetFramework="net452" />
   <package id="Chiron" version="6.2.1" targetFramework="net452" />
   <package id="CloudinaryDotNet" version="1.0.30" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
-  <package id="FParsec" version="1.0.1" targetFramework="net452" />
-  <package id="FSharp.Core" version="3.1.2.5" targetFramework="net452" />
-  <package id="Hopac" version="0.3.21" targetFramework="net452" />
+  <package id="FParsec" version="1.0.2" targetFramework="net452" />
+  <package id="FSharp.Core" version="4.1.12" targetFramework="net452" />
+  <package id="Hopac" version="0.3.23" targetFramework="net452" />
   <package id="Http.fs" version="4.1.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net452" />
-  <package id="NodaTime" version="1.3.2" targetFramework="net452" />
+  <package id="NodaTime" version="2.0.0" targetFramework="net452" />
   <package id="RestSharp" version="105.2.3" targetFramework="net452" />
+  <package id="System.ValueTuple" version="4.3.0" targetFramework="net452" />
 </packages>
