--- a/GlobalEvents/RepositorioClases/RepositorioClases.csproj
+++ b/GlobalEvents/RepositorioClases/RepositorioClases.csproj
@@ -56,6 +56,10 @@
     <Compile Include="Migrations\201705241232348_TablesPuntuacionesyAsistencias.Designer.cs">
       <DependentUpon>201705241232348_TablesPuntuacionesyAsistencias.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201705241819260_CambiosenEventosMaxi.cs" />
+    <Compile Include="Migrations\201705241819260_CambiosenEventosMaxi.Designer.cs">
+      <DependentUpon>201705241819260_CambiosenEventosMaxi.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Modelo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -69,6 +73,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201705241232348_TablesPuntuacionesyAsistencias.resx">
       <DependentUpon>201705241232348_TablesPuntuacionesyAsistencias.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201705241819260_CambiosenEventosMaxi.resx">
+      <DependentUpon>201705241819260_CambiosenEventosMaxi.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
