--- a/GlobalEvents/GlobalEvents/GlobalEvents.csproj
+++ b/GlobalEvents/GlobalEvents/GlobalEvents.csproj
@@ -305,6 +305,7 @@
     <Content Include="Views\Comments\ResponderComentarios.cshtml" />
     <Content Include="Views\Users\ReportarUsuario.cshtml" />
     <Content Include="Views\Users\UsuariosReportados.cshtml" />
+    <Content Include="Views\Manage\UserReported.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
