--- a/GlobalEvents/GlobalEvents/GlobalEvents.csproj
+++ b/GlobalEvents/GlobalEvents/GlobalEvents.csproj
@@ -321,6 +321,7 @@
     <Content Include="Views\Events\AsistenciaEvento.cshtml" />
     <Content Include="Views\Shared\ErroresVarios.cshtml" />
     <Content Include="Views\Events\Closed.cshtml" />
+    <Content Include="Views\Events\Intereses.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
